--- a/API/postsapiktor/build.gradle
+++ b/API/postsapiktor/build.gradle
@@ -6,11 +6,14 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'koin'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 group 'co.devhack'
 version '0.0.1'
@@ -38,7 +41,21 @@ dependencies {
     implementation "com.google.firebase:firebase-admin:$firebase_admin"
     implementation "org.koin:koin-ktor:$koin_version"
     implementation "org.koin:koin-logger-slf4j:$koin_version"
+
+    testImplementation "org.amshove.kluent:kluent:$kluent"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spek_version"
+    testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:$spek_version"
+    testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 
-apply plugin: 'koin'
+// setup the test task
+test {
+    useJUnitPlatform {
+        includeEngines 'spek2'
+    }
+}
+
+shadowJar {
+    mergeServiceFiles()
+}
